# KNN_Cuda

./: CMakeLists.txt  README.md  Test.cu  main.cu  makefile  test.txt  train.txt
inc/: knn_cuda.cuh  knn_cuda.hpp
src/: knn_cuda.cu
